--- a/S3/Programacion3/TP4-HTML/main.css
+++ b/S3/Programacion3/TP4-HTML/main.css
@@ -5,7 +5,7 @@ body{
 }
 
 .container{
-    margin: 20px 30%;
+    margin: 20px 20%;
 }
 
 .container div.children{
@@ -17,6 +17,9 @@ body{
     flex-direction: column;
     border-radius: 20px;
     margin-bottom: 40px;
+    width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .container div.children h1{
@@ -25,37 +28,124 @@ body{
     padding: 0;
     margin: 0 0 20px 0;
     width: 100%;
+    box-sizing: border-box;
     border-bottom: 1px #21212120 solid;
 }
 .container div.children h2{
     margin: 0;
     padding: 0;
 }
-.container div.children form{
+
+form.data{
     width: 100%;
-    box-sizing: border-box;
-}
-.container div.children form div{
     display: flex;
     flex-direction: column;
-    margin: 0 0 10px 0;
-    width: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
     box-sizing: border-box;
 }
-.container div.children form label{
+form.data div{
+    display: flex;
+    margin: 0 0 10px 0;
+    width: 100%;
+    align-items: center;
+    box-sizing: border-box;
+}
+form.data label{
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 700;
+    width: 25%;
+    text-align: right;
+    padding: 0 10px;
 }
-.container div.children form input{
+form.data input{
     padding: 10px;
-    width: 100%;
+    max-width: 75%;
     box-sizing: border-box;
     border: 1px #21212140 solid;
 }
+
 .container div.children .ld1{
     list-style-type: circle;
 }
 .container div.children .lo1{
     list-style-type: upper-alpha;
+}
+
+.container div.children table{
+    border: solid 0.5px #21212140;
+    padding: 0;
+    margin: 0;
+    border-spacing: 0;
+    width: 100%;
+}
+.container div.children table *{
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    border: none;
+    border-collapse: collapse;
+    text-align: center;
+    padding: 0;
+}
+.container div.children table td{
+    border: solid 0.5px #21212140;
+    border-collapse: collapse;
+    height: 50px;
+    width: 33.33%;
+    margin: 0;
+    padding: 0;
+}
+.container div.children table img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+}
+
+
+form.art{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 100%;
+}
+
+form.art div{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 0;
+}
+
+form.art div h2{
+    text-align: center;
+    padding-bottom: 10px !important;
+}
+
+form.art div div{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 0;
+    padding: 2.5px 0;
+}
+form.art div div label{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    width: 25%;
+    text-align: right;
+    padding: 0 10px;
+}
+form.art div div input{
+    padding: 5px;
+    max-width: 75%;
+    box-sizing: border-box;
+    border: 1px #21212140 solid;
 }
