--- a/S3/Programacion3/TP5-JS/css/main.css
+++ b/S3/Programacion3/TP5-JS/css/main.css
@@ -19,7 +19,7 @@ body{
 }
 
 .jsContent{
-    background: #21212195;
+    background: #212121e0;
     padding: 20px;
     border-radius: 20px;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
@@ -168,13 +168,14 @@ body{
     background: #161a20;
     border-radius: 10px;
     padding: 10px;
-    width: 30%;
-    height: 50%;
+    width: 500px;
+    height: 600px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
     gap: 5px;
     box-sizing: border-box;
+    position: relative;
 }
 
 .calculadora p{
@@ -219,6 +220,22 @@ body{
     background: #282e39;
 }
 
-.calculadora button.active{
-    background: red;
+.terminos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    top: -60px;
+    width: 100%;
+    gap: 10px;
+    position: absolute;
+}
+
+.terminos p{
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #161a20;
 }
